<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/background_material_dark" tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/btn_show_simple"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_simple"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_show_box"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_box"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_show_stub"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_stub"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_show_list"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_list"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_show_grid"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_show_grid"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_send_message"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_send_message"
            android:textAlignment="center"/>

        <Button
            android:id="@+id/btn_send_asset"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_send_asset"
            android:textAlignment="center"/>
    </LinearLayout>

</RelativeLayout>
